--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "minimist": "^1.2.6"
+    "caf": "8.0.1",
+    "express": "4.17.1",
+    "get-stdin": "7.0.0",
+    "minimist": "1.2.6",
+    "node-fetch": "3.1.1",
+    "node-static-alias": "1.1.2"
   }
 }
